--- a/mahjongtournamentmanager.client/src/app/home/home.component.html
+++ b/mahjongtournamentmanager.client/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home-container">
-  <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" style="height: 320px;">
-  <div class="login-button-wrapper">
-    <a routerLink="/login" class="button">ログイン</a>
-  </div>
-  <div class="register-link-wrapper">
-    <a routerLink="/register" class="subtle-link">新規登録</a>
+  <div class="content-wrapper">
+    <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" class="logo">
+    <div class="button-group">
+      <a routerLink="/login" class="btn btn-primary">ログイン</a>
+      <a routerLink="/register" class="btn btn-secondary">新規登録</a>
+    </div>
   </div>
 </div>
