--- a/mahjongtournamentmanager.client/src/app/login/login.component.html
+++ b/mahjongtournamentmanager.client/src/app/login/login.component.html
@@ -1,21 +1,30 @@
-<div class="auth-container">
-  <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" style="height: 80px; margin-bottom: 20px;">
-  <form (ngSubmit)="login()">
-    <div class="form-group">
-      <label for="username">ユーザー名:</label>
-      <input type="text" id="username" [(ngModel)]="model.username" name="username" required>
+<div class="auth-page-container">
+  <div class="auth-card card">
+    <header class="auth-header">
+      <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" class="logo">
+      <h2>ログイン</h2>
+    </header>
+    <form (ngSubmit)="login()">
+      <div class="form-group">
+        <label for="username" class="form-label">ユーザー名</label>
+        <input type="text" id="username" class="form-control" [(ngModel)]="model.username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password" class="form-label">パスワード</label>
+        <div class="password-input-wrapper">
+          <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control" [(ngModel)]="model.password" name="password" required>
+          <button type="button" class="password-toggle-btn" (click)="togglePasswordVisibility()">
+            <i class="fas" [class.fa-eye-slash]="!showPassword" [class.fa-eye]="showPassword"></i>
+          </button>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary btn-block">ログイン</button>
+    </form>
+    <footer class="auth-footer">
+      <p>アカウントをお持ちでないですか？ <a [routerLink]="['/register']">新規登録</a></p>
+    </footer>
+    <div *ngIf="errorMessage" class="error-message-box">
+      {{ errorMessage }}
     </div>
-    <div class="form-group password-group">
-      <label for="password">パスワード:</label>
-      <input [type]="showPassword ? 'text' : 'password'" id="password" [(ngModel)]="model.password" name="password" required>
-      <i class="fas toggle-password" [class.fa-eye-slash]="!showPassword" [class.fa-eye]="showPassword" (click)="togglePasswordVisibility()"></i>
-    </div>
-    <button type="submit">ログイン</button>
-  </form>
-  <div class="register-link-container">
-    <a [routerLink]="['/register']" class="subtle-link">新規登録</a>
-  </div>
-  <div *ngIf="errorMessage" class="error-message">
-    {{ errorMessage }}
   </div>
 </div>
