--- a/mahjongtournamentmanager.client/src/app/register/register.component.html
+++ b/mahjongtournamentmanager.client/src/app/register/register.component.html
@@ -1,19 +1,30 @@
-<div class="auth-container">
-  <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" style="height: 80px; margin-bottom: 20px;">
-  <h2>ユーザー登録</h2>
-  <form (ngSubmit)="register()">
-    <div class="form-group">
-      <label for="username">ユーザー名:</label>
-      <input type="text" id="username" [(ngModel)]="model.username" placeholder="ユーザー名を入力してください　例）ゆと" name="username" required>
+<div class="auth-page-container">
+  <div class="auth-card card">
+    <header class="auth-header">
+      <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" class="logo">
+      <h2>新規登録</h2>
+    </header>
+    <form (ngSubmit)="register()">
+      <div class="form-group">
+        <label for="username" class="form-label">ユーザー名</label>
+        <input type="text" id="username" class="form-control" [(ngModel)]="model.username" name="username" required placeholder="例: YCB_Taro">
+      </div>
+      <div class="form-group">
+        <label for="password" class="form-label">パスワード</label>
+        <div class="password-input-wrapper">
+          <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control" [(ngModel)]="model.password" name="password" required>
+          <button type="button" class="password-toggle-btn" (click)="togglePasswordVisibility()">
+            <i class="fas" [class.fa-eye-slash]="!showPassword" [class.fa-eye]="showPassword"></i>
+          </button>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary btn-block">登録する</button>
+    </form>
+    <footer class="auth-footer">
+      <p>すでにアカウントをお持ちですか？ <a [routerLink]="['/login']">ログイン</a></p>
+    </footer>
+    <div *ngIf="errorMessage" class="error-message-box">
+      {{ errorMessage }}
     </div>
-    <div class="form-group password-group">
-      <label for="password">パスワード:</label>
-      <input [type]="showPassword ? 'text' : 'password'" id="password" [(ngModel)]="model.password" name="password" required>
-      <i class="fas toggle-password" [class.fa-eye-slash]="!showPassword" [class.fa-eye]="showPassword" (click)="togglePasswordVisibility()"></i>
-    </div>
-    <button type="submit">登録</button>
-  </form>
-  <div *ngIf="errorMessage" class="error-message">
-    {{ errorMessage }}
   </div>
 </div>
