デザイン再修正

--- a/mahjongtournamentmanager.client/src/app/schedule-coordinator/schedule-coordinator.component.css
+++ b/mahjongtournamentmanager.client/src/app/schedule-coordinator/schedule-coordinator.component.css
@@ -33,9 +33,10 @@
 }
 
 .dialog-header h3 {
+  font-family: var(--font-family-display);
   font-size: 1.8rem;
   font-weight: 600;
-  color: #333;
+  color: var(--main-color);
 }
 
 .dialog-body {
