--- a/mahjongtournamentmanager.client/src/app/schedule-coordinator/schedule-coordinator.component.html
+++ b/mahjongtournamentmanager.client/src/app/schedule-coordinator/schedule-coordinator.component.html
@@ -62,8 +62,8 @@
       </div>
     </div>
     <div class="dialog-footer">
-      <button class="mahjong-button" (click)="saveAvailabilities()">保存</button>
-      <button class="mahjong-button" (click)="closeDialog()">閉じる</button>
+      <button (click)="saveAvailabilities()" class="btn btn-primary">保存</button>
+      <button (click)="closeDialog()" class="btn btn-secondary">閉じる</button>
     </div>
   </div>
 </div>
